--- a/css/style.css
+++ b/css/style.css
@@ -81,3 +81,17 @@ button {
 .site-header ul {
   margin: 0;
 }
+
+
+.company-image {
+  margin: 40px auto;
+  text-align: center;
+}
+
+.company-image img {
+  max-width: 700px;   /* KLJUČNO – ograničenje veličine */
+  width: 100%;
+  height: auto;
+  border-radius: 6px;
+  box-shadow: 0 3px 12px rgba(0, 0, 0, 0.15);
+}
