--- a/partials/header.html
+++ b/partials/header.html
@@ -1,7 +1,10 @@
 <header class="site-header">
   <div class="container header-flex">
     <h1>Lauš usluge j.d.o.o.</h1>
-    <nav>
+    <button class="hamburger" aria-label="Otvori meni">
+      ☰
+    </button>
+    <nav class="nav-menu">
       <ul>
         <li><a href="./index.html">Početna</a></li>
         <li><a href="./contact.html">Kontakt</a></li>
