--- a/css/style.css
+++ b/css/style.css
@@ -195,3 +195,11 @@ button {
     font-size: 1.3rem; /* veći linkovi na mobitelu */
   }
 }
+
+.nav-menu {
+  display: none;
+}
+
+.nav-menu.active {
+  display: block;
+}
