--- a/partials/header.html
+++ b/partials/header.html
@@ -1,12 +1,7 @@
 <header class="site-header">
   <div class="container header-flex">
     <h1>Lauš usluge j.d.o.o.</h1>
-
-    <button class="hamburger" aria-label="Otvori meni">
-      ☰
-    </button>
-
-    <nav class="nav-menu">
+    <nav>
       <ul>
         <li><a href="./index.html">Početna</a></li>
         <li><a href="./contact.html">Kontakt</a></li>
